--- a/source/form.html
+++ b/source/form.html
@@ -8,146 +8,148 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="main-nav">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
-      </a>
-      <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a class="site-list__link" href="index.html">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="photo.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html">Форма Отзыва</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="page-main">
-
-    <section class="intro">
-      <div class="intro__wrapper-image">
-        <img class="intro__image" src="#" width="320" height="389" alt="Вид города Седона">
-        <img class="intro__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
-      </div>
-      <div class="intro__wrapper-text">
-        <h1 class="intro__title">Оставьте свой отзыв</h1>
-        <p class="intro__text">
-          Помогите нашим отелям стать лучше!
-          Оставьте отзыв о них, а также о посещенных вами достопримечательностях
-        </p>
-      </div>
-    </section>
-
-    <section class="feedback">
-      <h2 class="visually-hidden">Форма отзыва</h2>
-      <form class="feedback__form" method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="feedback__fieldset">
-          <legend class="feedback__title">Представьтесь:</legend>
-          <p>
-            <label class="feedback__label" for="name">Имя*:</label>
-            <input class="feedback__input feedback__input--grey" id="name" type="text" name="name" value="" placeholder="Петр">
-          </p>
-          <p>
-            <label class="feedback__label" for="surname">Фамилия*:</label>
-            <input class="feedback__input feedback__input--grey" id="surname" type="text" name="surname" value="" placeholder="Иванов">
-          </p>
-          <p>
-            <label class="feedback__label" for="patronymic">Отчество:</label>
-            <input class="feedback__input feedback__input--grey" id="patronymic" type="text" name="patronymic" value="" placeholder="Александрович">
-          </p>
-        </fieldset>
-        <fieldset class="feedback__fieldset feedback__fieldset--contact-information">
-          <legend class="feedback__title feedback__title--contact-information">Контактная информация:</legend>
-          <p>
-            <label class="feedback__label" for="tel">Контактный телефон*:</label>
-            <input class="feedback__input feedback__input--grey" id="tel" type="tel" name="tel" value="" placeholder="Введите телефон">
-          </p>
-          <p>
-            <label class="feedback__label" for="email">Электронная почта*:</label>
-            <input class="feedback__input feedback__input--grey" id="email" type="email" name="email" value="" placeholder="Введите e-mail">
-        </fieldset>
-
-        <fieldset class="feedback__fieldset feedback__fieldset--your-impressions">
-          <legend class="feedback__title feedback__title--your-impressions">Ваше общее впечатление:</legend>
-          <ul class="feedback__list">
-            <li>
-              <label class="feedback__label label-relative" for="positive-impression">Скорее положительное</label>
-              <input class="feedback__input feedback__input--radio" id="positive-impression" type="radio" name="impression" value="positive" checked>
-            </li>
-            <li>
-              <label class="feedback__label label-relative" for="negative-impression">Скорее отрицательное</label>
-              <input class="feedback__input feedback__input--radio" id="negative-impression" type="radio" name="impression" value="negative">
-            </li>
-            <li>
-              <label class="feedback__label label-relative" for="dont-know-impression">Затрудняюсь ответить</label>
-              <input class="feedback__input feedback__input--radio" id="dont-know-impression" type="radio" name="impression" value="dont-know">
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="feedback__fieldset feedback__fieldset--sightseengs-visited">
-          <legend class="feedback__title feedback__title--sightseengs-visited">Посещенные достопримечательности:</legend>
-          <ul class="feedback__list">
-            <li>
-              <input class="feedback__input" type="checkbox" name="devils-bridge" id="filter-devils-bridge" checked>
-              <label class="feedback__label feedback__input--checkbox" for="filter-devils-bridge">Мост Дьявола</label>
-            </li>
-            <li>
-              <input class="feedback__input" type="checkbox" name="mountain-bell" id="filter-mountain-bell" checked>
-              <label class="feedback__label feedback__input--checkbox" for="filter-mountain-bell">Гора-Колокол</label>
-            </li>
-            <li>
-              <input class="feedback__input" type="checkbox" name="slide-park" id="filter-slide-park" checked>
-              <label class="feedback__label feedback__input--checkbox" for="filter-slide-park">Слайд-парк</label>
-            </li>
-            <li>
-              <input class="feedback__input" type="checkbox" name="red-cliffs" id="filter-red-cliffs">
-              <label class="feedback__label feedback__input--checkbox" for="filter-red-cliffs">Красные скалы</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="feedback__fieldset feedback__fieldset--your-emotions">
-          <legend class="feedback__title feedback__title--your-emotions">Опишите свои эмоции:</legend>
-          <textarea class="feedback__label feedback__input--grey" id="emotions" name="emotions" rows="5">Опишите подробно все свои восторги</textarea>
-        </fieldset>
-        <button class="send-review button" type="submit">Отправить отзыв</button>
-      </form>
-    </section>
-  </main>
-
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <b class="page-footer__tag">#visitsedona</b>
-      <section class="page-footer__social social">
-        <h3 class="visually-hidden">Седона в соцсетях</h3>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+  <div class="container">
+    <header class="page-header">
+      <nav class="main-nav">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
+        </a>
+        <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <li class="site-list__item">
+            <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Форма Отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
+      </nav>
+    </header>
+
+    <main class="page-main">
+
+      <section class="intro">
+        <div class="intro__wrapper-image">
+          <img class="intro__image" src="#" width="320" height="389" alt="Вид города Седона">
+          <img class="intro__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+        </div>
+        <div class="intro__wrapper-text">
+          <h1 class="intro__title">Оставьте свой отзыв</h1>
+          <p class="intro__text">
+            Помогите нашим отелям стать лучше!
+            Оставьте отзыв о них, а также о посещенных вами достопримечательностях
+          </p>
+        </div>
       </section>
 
-      <div class="made-by">
-        <b class="made-by__title">Разработано</b>
-        <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+      <section class="feedback">
+        <h2 class="visually-hidden">Форма отзыва</h2>
+        <form class="feedback__form" method="post" action="https://echo.htmlacademy.ru">
+          <fieldset class="feedback__fieldset">
+            <legend class="feedback__title">Представьтесь:</legend>
+            <p>
+              <label class="feedback__label" for="name">Имя*:</label>
+              <input class="feedback__input feedback__input--grey" id="name" type="text" name="name" value="" placeholder="Петр">
+            </p>
+            <p>
+              <label class="feedback__label" for="surname">Фамилия*:</label>
+              <input class="feedback__input feedback__input--grey" id="surname" type="text" name="surname" value="" placeholder="Иванов">
+            </p>
+            <p>
+              <label class="feedback__label" for="patronymic">Отчество:</label>
+              <input class="feedback__input feedback__input--grey" id="patronymic" type="text" name="patronymic" value="" placeholder="Александрович">
+            </p>
+          </fieldset>
+          <fieldset class="feedback__fieldset feedback__fieldset--contact-information">
+            <legend class="feedback__title feedback__title--contact-information">Контактная информация:</legend>
+            <p>
+              <label class="feedback__label" for="tel">Контактный телефон*:</label>
+              <input class="feedback__input feedback__input--grey" id="tel" type="tel" name="tel" value="" placeholder="Введите телефон">
+            </p>
+            <p>
+              <label class="feedback__label" for="email">Электронная почта*:</label>
+              <input class="feedback__input feedback__input--grey" id="email" type="email" name="email" value="" placeholder="Введите e-mail">
+          </fieldset>
+
+          <fieldset class="feedback__fieldset feedback__fieldset--your-impressions">
+            <legend class="feedback__title feedback__title--your-impressions">Ваше общее впечатление:</legend>
+            <ul class="feedback__list">
+              <li>
+                <label class="feedback__label label-relative" for="positive-impression">Скорее положительное</label>
+                <input class="feedback__input feedback__input--radio" id="positive-impression" type="radio" name="impression" value="positive" checked>
+              </li>
+              <li>
+                <label class="feedback__label label-relative" for="negative-impression">Скорее отрицательное</label>
+                <input class="feedback__input feedback__input--radio" id="negative-impression" type="radio" name="impression" value="negative">
+              </li>
+              <li>
+                <label class="feedback__label label-relative" for="dont-know-impression">Затрудняюсь ответить</label>
+                <input class="feedback__input feedback__input--radio" id="dont-know-impression" type="radio" name="impression" value="dont-know">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="feedback__fieldset feedback__fieldset--sightseengs-visited">
+            <legend class="feedback__title feedback__title--sightseengs-visited">Посещенные достопримечательности:</legend>
+            <ul class="feedback__list">
+              <li>
+                <input class="feedback__input" type="checkbox" name="devils-bridge" id="filter-devils-bridge" checked>
+                <label class="feedback__label feedback__input--checkbox" for="filter-devils-bridge">Мост Дьявола</label>
+              </li>
+              <li>
+                <input class="feedback__input" type="checkbox" name="mountain-bell" id="filter-mountain-bell" checked>
+                <label class="feedback__label feedback__input--checkbox" for="filter-mountain-bell">Гора-Колокол</label>
+              </li>
+              <li>
+                <input class="feedback__input" type="checkbox" name="slide-park" id="filter-slide-park" checked>
+                <label class="feedback__label feedback__input--checkbox" for="filter-slide-park">Слайд-парк</label>
+              </li>
+              <li>
+                <input class="feedback__input" type="checkbox" name="red-cliffs" id="filter-red-cliffs">
+                <label class="feedback__label feedback__input--checkbox" for="filter-red-cliffs">Красные скалы</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="feedback__fieldset feedback__fieldset--your-emotions">
+            <legend class="feedback__title feedback__title--your-emotions">Опишите свои эмоции:</legend>
+            <textarea class="feedback__label feedback__input--grey" id="emotions" name="emotions" rows="5">Опишите подробно все свои восторги</textarea>
+          </fieldset>
+          <button class="send-review button" type="submit">Отправить отзыв</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <b class="page-footer__tag tag">#visitsedona</b>
+        <section class="page-footer__social social">
+          <h3 class="visually-hidden">Седона в соцсетях</h3>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+            </li>
+          </ul>
+        </section>
+
+        <div class="made-by">
+          <b class="made-by__title">Разработано</b>
+          <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 
 </html>
