--- a/source/index.html
+++ b/source/index.html
@@ -8,134 +8,138 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="main-nav">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
-      </a>
-      <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a class="site-list__link site-list__link--left">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link site-list__link--left" href="photo.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html">Форма Отзыва</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="page-main">
-    <section class="promo">
-      <div class="promo__wrapper">
-        <img class="promo__image" src="#" width="320" height="389" alt="Вид города Седона">
-        <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
-      </div>
-      <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
-      <div class="promo__text">
-        <b class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
-        <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
-      </div>
-    </section>
-
-    <section class="advantages">
-      <ul class="advantages__list">
-        <li class="advantages__item advantages__item--lightblue">
-          <section class="advantages__text-wrapper">
-            <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
-            <span class="advantages__number advantages__number--white">— №1 —</span>
-            <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          </section>
-          <div>
-            <img class="advantages__image" src="#" width="320" height="260" alt="Жизнь в Седоне">
-          </div>
-        </li>
-        <ul class="advantages__list">
-
-          <li class="advantages__item advantages__item--housing">
-            <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+  <div class="container">
+    <header class="page-header">
+      <nav class="main-nav">
+        <a class="page-header__logo">
+          <picture>
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+          </picture>
+        </a>
+        <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link site-list__link--left">Главная</a>
           </li>
-
-          <li class="advantages__item advantages__item--souvenirs">
-            <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+          <li class="site-list__item">
+            <a class="site-list__link site-list__link--left" href="photo.html">Фото и видео</a>
           </li>
-
-          <li class="advantages__item advantages__item--food">
-            <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Форма Отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
+      </nav>
+    </header>
 
-        <li class="advantages__item advantages__item--lightblue">
-          <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
-          <span class="advantages__number advantages__number--white">— №2 —</span>
-          <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
-        </li>
+    <main class="page-main">
+      <section class="promo">
+        <div class="promo__wrapper">
+          <img class="promo__image" src="#" width="320" height="389" alt="Вид города Седона">
+          <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+        </div>
+        <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
+        <div class="promo__text">
+          <b class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
+          <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
+        </div>
+      </section>
+
+      <section class="advantages">
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--grey">
-            <h3 class="advantages__title"> Небольшая площадь</h3>
-            <span class="advantages__number">— №3 —</span>
-            <p class="advantages__argument">Все интересные места находятся очень близко</p>
+          <li class="advantages__item advantages__item--lightblue">
+            <section class="advantages__text-wrapper">
+              <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
+              <span class="advantages__number advantages__number--white">— №1 —</span>
+              <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </section>
+            <div>
+              <img class="advantages__image" src="#" width="320" height="260" alt="Жизнь в Седоне">
+            </div>
           </li>
+          <ul class="advantages__list">
 
-          <li class="advantages__item advantages__item--grey">
-            <h3 class="advantages__title">Красивая дорога</h3>
-            <span class="advantages__number">— №4 —</span>
-            <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
+            <li class="advantages__item advantages__item--housing">
+              <h3 class="advantages__title">Жилье</h3>
+              <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
 
-          <li class="advantages__item advantages__item--grey">
-            <h3 class="advantages__title">Мало туристов</h3>
-            <span class="advantages__number">— №5 —</span>
-            <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
-          </li>
-        </ul>
-      </ul>
-    </section>
+            <li class="advantages__item advantages__item--souvenirs">
+              <h3 class="advantages__title">Сувениры</h3>
+              <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+            </li>
 
-    <section class="search-hotel">
-      <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
-      <b class="search-hotel__title">Заинтересовались?</b>
-      <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <a class="search-hotel__show button" href="#">Найти гостиницу</a>
-    </section>
-  </main>
+            <li class="advantages__item advantages__item--food">
+              <h3 class="advantages__title">Еда</h3>
+              <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
+            </li>
+          </ul>
 
-  <footer class="page-footer">
-    <img src="#" width="320" height="350" alt="Седона на карте">
-    <div class="page-footer__wrapper">
-      <b class="page-footer__tag">#visitsedona</b>
-      <section class="page-footer__social social">
-        <h3 class="visually-hidden">Седона в соцсетях</h3>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+          <li class="advantages__item advantages__item--lightblue">
+            <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
+            <span class="advantages__number advantages__number--white">— №2 —</span>
+            <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
-          </li>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--grey">
+              <h3 class="advantages__title"> Небольшая площадь</h3>
+              <span class="advantages__number">— №3 —</span>
+              <p class="advantages__argument">Все интересные места находятся очень близко</p>
+            </li>
+
+            <li class="advantages__item advantages__item--grey">
+              <h3 class="advantages__title">Красивая дорога</h3>
+              <span class="advantages__number">— №4 —</span>
+              <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+
+            <li class="advantages__item advantages__item--grey">
+              <h3 class="advantages__title">Мало туристов</h3>
+              <span class="advantages__number">— №5 —</span>
+              <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
+            </li>
+          </ul>
         </ul>
       </section>
 
-      <div class="made-by">
-        <b class="made-by__title">Разработано</b>
-        <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+      <section class="search-hotel">
+        <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
+        <b class="search-hotel__title">Заинтересовались?</b>
+        <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a class="search-hotel__show button" href="#">Найти гостиницу</a>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <img src="#" width="320" height="350" alt="Седона на карте">
+      <div class="page-footer__wrapper">
+        <b class="page-footer__tag tag">#visitsedona</b>
+        <section class="page-footer__social social">
+          <h3 class="visually-hidden">Седона в соцсетях</h3>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+            </li>
+          </ul>
+        </section>
+
+        <div class="made-by">
+          <b class="made-by__title">Разработано</b>
+          <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 
 </html>
