--- a/source/form.html
+++ b/source/form.html
@@ -10,19 +10,35 @@
 <body>
   <div class="container">
     <header class="page-header">
-      <nav class="main-nav">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="#" width="102" height="83" alt="Седона">
-        </a>
-        <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
+      <nav class="main-nav main-nav--closed main-nav--opened main-nav--nojs">
+        <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
+          <span class="visually-hidden">
+            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
+              xml:space="preserve">
+              <g>
+                <rect fill="#81b3d2" width="22.928" height="3.964" />
+                <rect fill="#81b3d2" y="9.009" width="22.928" height="3.964" />
+                <rect fill="#81b3d2" y="18.018" width="22.928" height="3.964" />
+              </g>
+            </svg>
+            Открыть меню</span></button>
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
+          <li class="site-list__item">
             <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
-          <li class="site-list__item">
+          <div class="page-header__logo page-header__logo--wrapper">
+            <a class="page-header__logo">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+              </picture>
+            </a>
+          </div>
+          <li class="site-list__item site-list__item--active">
             <a class="site-list__link" href="form.html">Форма Отзыва</a>
           </li>
           <li class="site-list__item">
@@ -150,6 +166,23 @@
       </div>
     </footer>
   </div>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
+
 </body>
 
 </html>
