--- a/source/index.html
+++ b/source/index.html
@@ -10,21 +10,35 @@
 <body>
   <div class="container">
     <header class="page-header">
-      <nav class="main-nav">
-        <a class="page-header__logo">
-          <picture>
-             <source src="">
-            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
-          </picture>
-        </a>
-        <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
+      <nav class="main-nav main-nav--opened main-nav--closed main-nav--nojs">
+
+        <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
+            xml:space="preserve">
+            <g>
+              <rect fill="#81b3d2" width="22.928" height="3.964" />
+              <rect fill="#81b3d2" y="9.009" width="22.928" height="3.964" />
+              <rect fill="#81b3d2" y="18.018" width="22.928" height="3.964" />
+            </g>
+          </svg>
+          <span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="site-list__link site-list__link--left">Главная</a>
+            <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--left" href="photo.html">Фото и видео</a>
+            <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
+          <div class="page-header__logo page-header__logo--wrapper">
+            <a class="page-header__logo">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+              </picture>
+            </a>
+          </div>
+
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Форма Отзыва</a>
           </li>
@@ -38,8 +52,14 @@
     <main class="page-main">
       <section class="promo">
         <div class="promo__wrapper">
-          <img class="promo__image" src="#" width="320" height="389" alt="Вид города Седона">
-          <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+          <picture class"promo__image">
+            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@2x.jpg">
+            <source media="(min-width: 768px)" srcset="img/bg-back-mobile@2x.jpg">
+            <img src="img/bg-back-mobile@2x.jpg" alt="Вид города Седона">
+          </picture>
+          <picture>
+            <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+          </picture>
         </div>
         <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
         <div class="promo__text">
@@ -56,53 +76,74 @@
               <span class="advantages__number advantages__number--white">— №1 —</span>
               <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </section>
-            <div>
-              <img class="advantages__image" src="#" width="320" height="260" alt="Жизнь в Седоне">
+            <div class="advantages__image-wrapper">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
+                <img class="advantages__image" src="img/main-city-mobile@1x.jpg" alt="Жизнь в Седоне">
+              </picture>
             </div>
           </li>
-          <ul class="advantages__list">
+          <li class="advantages__wrapper">
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--housing">
+                <section class="advantages__section">
+                  <h3 class="advantages__title">Жилье</h3>
+                  <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </section>
+              </li>
 
-            <li class="advantages__item advantages__item--housing">
-              <h3 class="advantages__title">Жилье</h3>
-              <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
+              <li class="advantages__item advantages__item--souvenirs">
+                <section class="advantages__section">
+                  <h3 class="advantages__title">Сувениры</h3>
+                  <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+                </section>
+              </li>
 
-            <li class="advantages__item advantages__item--souvenirs">
-              <h3 class="advantages__title">Сувениры</h3>
-              <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
-            </li>
-
-            <li class="advantages__item advantages__item--food">
-              <h3 class="advantages__title">Еда</h3>
-              <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
-            </li>
-          </ul>
+              <li class="advantages__item advantages__item--food">
+                <section class="advantages__section">
+                  <h3 class="advantages__title">Еда</h3>
+                  <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
+                </section>
+              </li>
+            </ul>
+          </li>
 
           <li class="advantages__item advantages__item--lightblue">
-            <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
-            <span class="advantages__number advantages__number--white">— №2 —</span>
-            <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
+            <section class="advantages__text-wrapper">
+              <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
+              <span class="advantages__number advantages__number--white">— №2 —</span>
+              <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </section>
+            <div class="advantages__image-wrapper">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
+                <img class="advantages__image" src="img/main-bridge-mobile@1x.jpg" alt="Мост дьявола">
+              </picture>
+            </div>
           </li>
-          <ul class="advantages__list">
-            <li class="advantages__item advantages__item--grey">
-              <h3 class="advantages__title"> Небольшая площадь</h3>
-              <span class="advantages__number">— №3 —</span>
-              <p class="advantages__argument">Все интересные места находятся очень близко</p>
-            </li>
+          <li>
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--grey">
+                <h3 class="advantages__title"> Небольшая площадь</h3>
+                <span class="advantages__number">— №3 —</span>
+                <p class="advantages__argument">Все интересные места находятся очень близко</p>
+              </li>
 
-            <li class="advantages__item advantages__item--grey">
-              <h3 class="advantages__title">Красивая дорога</h3>
-              <span class="advantages__number">— №4 —</span>
-              <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
+              <li class="advantages__item advantages__item--grey">
+                <h3 class="advantages__title">Красивая дорога</h3>
+                <span class="advantages__number">— №4 —</span>
+                <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
 
-            <li class="advantages__item advantages__item--grey">
-              <h3 class="advantages__title">Мало туристов</h3>
-              <span class="advantages__number">— №5 —</span>
-              <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
-            </li>
-          </ul>
+              <li class="advantages__item advantages__item--grey">
+                <h3 class="advantages__title">Мало туристов</h3>
+                <span class="advantages__number">— №5 —</span>
+                <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
+              </li>
+            </ul>
+          </li>
         </ul>
       </section>
 
@@ -141,6 +182,23 @@
       </div>
     </footer>
   </div>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
+
 </body>
 
 </html>
