--- a/source/index.html
+++ b/source/index.html
@@ -87,21 +87,21 @@
           <li class="advantages__wrapper">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
-                <section class="advantages__section">
+                <section class="advantages__text-wrapper advantages__text-wrapper--housing">
                   <h3 class="advantages__title">Жилье</h3>
                   <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </section>
               </li>
 
               <li class="advantages__item advantages__item--souvenirs">
-                <section class="advantages__section">
+                <section class="advantages__text-wrapper advantages__text-wrapper--souvenirs">
                   <h3 class="advantages__title">Сувениры</h3>
                   <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
                 </section>
               </li>
 
               <li class="advantages__item advantages__item--food">
-                <section class="advantages__section">
+                <section class="advantages__text-wrapper advantages__text-wrapper--food">
                   <h3 class="advantages__title">Еда</h3>
                   <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
                 </section>
