--- a/source/index.html
+++ b/source/index.html
@@ -110,12 +110,12 @@
           </li>
 
           <li class="advantages__item advantages__item--lightblue">
-            <section class="advantages__text-wrapper">
+            <section class="advantages__text-wrapper advantages__text-wrapper--inversed-order">
               <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
               <span class="advantages__number advantages__number--white">— №2 —</span>
               <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </section>
-            <div class="advantages__image-wrapper">
+            <div class="advantages__image-wrapper advantages__image-wrapper--inversed-order">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
