--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title> Седона</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -11,7 +14,15 @@
   <div class="container">
     <header class="page-header">
       <nav class="main-nav main-nav--opened main-nav--closed main-nav--nojs">
-
+        <div class="page-header__logo page-header__logo--wrapper">
+          <a class="page-header__logo">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+              <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+            </picture>
+          </a>
+        </div>
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
             xml:space="preserve">
@@ -29,15 +40,6 @@
           <li class="site-list__item">
             <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
-          <div class="page-header__logo page-header__logo--wrapper">
-            <a class="page-header__logo">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-                <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
-              </picture>
-            </a>
-          </div>
 
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Форма Отзыва</a>
@@ -52,13 +54,13 @@
     <main class="page-main">
       <section class="promo">
         <div class="promo__wrapper">
-          <picture class"promo__image">
-            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@2x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-back-mobile@2x.jpg">
-            <img src="img/bg-back-mobile@2x.jpg" alt="Вид города Седона">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@1x.jpg">
+            <source media="(min-width: 768px)" srcset="img/bg-back-tablet@1x.jpg">
+            <img class"promo__image" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид города Седона">
           </picture>
           <picture>
-            <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+            <img class="promo__slogan" src="text-sedona-index.svg" width="281" height="214" alt="Слоган города Седона">
           </picture>
         </div>
         <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
@@ -159,6 +161,7 @@
       <img src="#" width="320" height="350" alt="Седона на карте">
       <div class="page-footer__wrapper">
         <b class="page-footer__tag tag">#visitsedona</b>
+
         <section class="page-footer__social social">
           <h3 class="visually-hidden">Седона в соцсетях</h3>
           <ul class="social__list">
@@ -177,7 +180,7 @@
         <div class="made-by">
           <b class="made-by__title">Разработано</b>
           <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+            <img class="made-by__image" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
         </div>
       </div>
     </footer>
