--- a/source/photo.html
+++ b/source/photo.html
@@ -4,12 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>Фото | Седона</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="container">
     <header class="page-header">
+      <div class="page-header__logo page-header__logo--wrapper">
+        <a class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+          </picture>
+        </a>
+      </div>
       <nav class="main-nav main-nav--closed main-nav--opened main-nav--nojs">
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <span class="visually-hidden">
@@ -29,16 +42,6 @@
           <li class="site-list__item site-list__item--active">
             <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
-
-          <div class="page-header__logo page-header__logo--wrapper">
-            <a class="page-header__logo">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-                <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
-              </picture>
-            </a>
-          </div>
 
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Форма Отзыва</a>
@@ -165,7 +168,7 @@
         <div class="made-by">
           <b class="made-by__title">Разработано</b>
           <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+            <img class="made-by__image" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
         </div>
       </div>
     </footer>
